--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "postcss": "^8.4.41",
